--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   </section>
   <!-- Features -->
   <section id="features" class="bg-white py-5">
-    <div class="container">
+    <div class="container py-5">
       <div class="row">
         <div class="col-4 d-flex">
           <div class="icon-square text-body-emphasis bg-body-secondary d-inline-flex align-items-center justify-content-center fs-4 flex-shrink-0 me-3">
@@ -46,7 +46,7 @@
             </svg>
           </div>
           <div>
-            <h3>Easy to use.</h3>
+            <h3 class="fs-2">Easy to use.</h3>
             <p>So easy to use, even your dog could do it.</p>
           </div>
         </div>
@@ -59,7 +59,7 @@
             </svg>
           </div>
           <div>
-            <h3>Elite Clientele</h3>
+            <h3 class="fs-2">Elite Clientele.</h3>
             <p>We have all the dogs, the greatest dogs.</p>
           </div>
         </div>
@@ -71,7 +71,7 @@
             </svg>
           </div>
           <div>
-            <h3>Guaranteed to work.</h3>
+            <h3 class="fs-2">Guaranteed to work.</h3>
             <p>Find the love of your dog's life or your money back.</p>
           </div>
         </div>
@@ -81,25 +81,25 @@
   </section>
   <!-- Testimonial -->
   <section id="testimonial" class="bg-body-tertiary py-5">
-    <div class="p-5">
-      <div class="text-center">
+    <div class="">
+      <div class="container text-center py-5">
         <h2 class="fs-2">"I no longer have to sniff other dogs for love. I've found the hottest Corgi on TinDog. Woof."</h2>
         <img src="./images/dog-img.jpg" style="width: 100px;" class="rounded-circle mt-5" alt="">
-        <p>Pedrinho, São Paulo</p>
+        <p class="lead">Pedrinho, São Paulo</p>
       </div>
     
-      <div class="container mt-5">
+      <div class="container">
         <div class="row">
-          <div class="col-3">
+          <div class="col-3 d-flex justify-content-center">
             <img src="./images/techcrunch.png" height="30" alt="">
           </div>
-          <div class="col-3">
+          <div class="col-3 d-flex justify-content-center">
             <img src="./images/mashable.png" height="30" alt="">
           </div>
-          <div class="col-3">
+          <div class="col-3 d-flex justify-content-center">
             <img src="./images/bizinsider.png" height="30" alt="">
           </div>
-          <div class="col-3">
+          <div class="col-3 d-flex justify-content-center">
             <img src="./images/tnw.png" height="30" width="" alt="">
           </div>
         </div>
@@ -107,14 +107,14 @@
     </div>
   </section>
   <!-- Pricing -->
-  <section id="pricing" class="bg-white py-5 d-flex justify-content-center">
-    <div class="w-75">
-      <div class="d-flex flex-column align-items-center">
-        <h2>A Plan for Every Dog's Needs</h2>
-        <p>Simple and affordable price plans for you and your dog.</p>
+  <section id="pricing" class="bg-white pt-5 pb-4 d-flex justify-content-center">
+    <div class="container">
+      <div class="d-flex flex-column align-items-center mt-4">
+        <h2 class="display-4 fw-normal">A Plan for Every Dog's Needs</h2>
+        <p class="text-body-secondary fs-5">Simple and affordable price plans for you and your dog.</p>
       </div>
     
-      <div class="row row-cols-1 row-cols-md-3 mb-3 text-center">
+      <div class="row row-cols-1 row-cols-md-3 mb-3 mt-4 text-center">
         <div class="col">
           <div class="card mb-4 rounded-3 shadow-sm">
             <div class="card-header py-3">
